// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="default_input"
      title="default"
    >
      default
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="default_popup"
          />
          <div
            className="ant-picker ant-picker-range {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <div
              className="ant-picker-input ant-picker-input-active"
            >
              <input
                autoComplete="off"
                disabled={false}
                id="default_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder=""
                readOnly={true}
                size={12}
                value=""
              />
            </div>
            <div
              className="ant-picker-range-separator"
            >
              ~
            </div>
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder=""
                readOnly={true}
                size={12}
                value=""
              />
            </div>
            <div
              className="ant-picker-active-bar"
              style={
                Object {
                  "left": 0,
                  "position": "absolute",
                  "width": 0,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.title 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.title_input"
      title="DateRangeSelector title"
    >
      DateRangeSelector title
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.title_popup"
          />
          <div
            className="ant-picker ant-picker-range {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <div
              className="ant-picker-input ant-picker-input-active"
            >
              <input
                autoComplete="off"
                disabled={false}
                id="properties.title_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder=""
                readOnly={true}
                size={12}
                value=""
              />
            </div>
            <div
              className="ant-picker-range-separator"
            >
              ~
            </div>
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder=""
                readOnly={true}
                size={12}
                value=""
              />
            </div>
            <div
              className="ant-picker-active-bar"
              style={
                Object {
                  "left": 0,
                  "position": "absolute",
                  "width": 0,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;
